--- a/src/UI/Modal/Modal.module.scss
+++ b/src/UI/Modal/Modal.module.scss
@@ -3,16 +3,25 @@
   top: 0;
   left: 0;
   width: 100vw;
-  z-index: 1;
   height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #00000040;
-  &__content {    
-    position: relative;    
-    box-sizing: 0 0 12px gray;
+  &__backdrop {
+    background-color: #00000040;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    // z-index: 1;
+  }
+  &__content {
+    position: relative;
+    box-shadow: 0 0 12px gray;
     background-color: #fff;
+    border-radius: 4px;
+    padding: 1rem;
   }
   &__clase {
     position: absolute;
@@ -25,8 +34,9 @@
     width: 3rem;
     font-size: 3rem;
     border-radius: 50%;
-    background-color: lightblue;
-    color: #000;
+    background-color: #f76707;
+    color: #fff ;
     font-weight: bolder;
+    cursor: pointer;
   }
 }
