add dragabele items oraund the section

--- a/src/UI/card/Card.module.scss
+++ b/src/UI/card/Card.module.scss
@@ -1,7 +1,9 @@
 .card {
-  padding: 1rem;
-  box-shadow: 0 0 12px #777;
   display: grid;
-  gap:1rem;
+  // gap:1rem;
   grid-template-rows: auto 1fr;
+  border-left: 1px solid #000;
+  &:first-child{
+    border-left:none;
+  }
 }
