--- a/src/UI/Modal/Modal.module.scss
+++ b/src/UI/Modal/Modal.module.scss
@@ -7,6 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: all 0.4;
   &__backdrop {
     background-color: #00000040;
     position: absolute;
@@ -14,7 +15,7 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    // z-index: 1;
+    transition: all 0.4;
   }
   &__content {
     position: relative;
@@ -22,6 +23,7 @@
     background-color: #fff;
     border-radius: 4px;
     padding: 1rem;
+    transition: all 0.4;
   }
   &__clase {
     position: absolute;
@@ -35,7 +37,7 @@
     font-size: 3rem;
     border-radius: 50%;
     background-color: #f76707;
-    color: #fff ;
+    color: #fff;
     font-weight: bolder;
     cursor: pointer;
   }
