--- a/src/components/Nots/Note.module.scss
+++ b/src/components/Nots/Note.module.scss
@@ -2,6 +2,7 @@
   background-color: #fff;
   border: 1px solid #228be6;
   border-radius: 4px;
+  margin:.5rem;
   &__title {
     font-size: 1.6rem;
     background-color: #228be6;
