--- a/src/layout/Board.module.scss
+++ b/src/layout/Board.module.scss
@@ -2,15 +2,17 @@
   padding: 2rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 1rem;
   min-width: 100vh;
   &__title {
+    background-color: #5fbaff;
+    padding: 1rem;
     text-align: center;
+    color: #000;
   }
   &__notes {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+
   }
 }
 .addNewNote {
