--- a/src/UI/Modal/Modal.module.scss
+++ b/src/UI/Modal/Modal.module.scss
@@ -1,29 +1,27 @@
 .modal {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 0.4;
   &__backdrop {
-    background-color: #00000040;
+    background-color: #bebebe3d;
+    backdrop-filter: blur(1px);
     position: absolute;
     top: 0;
     left: 0;
     height: 100vh;
     width: 100vw;
-    transition: all 0.4;
+    transition: all 0.4s;
   }
   &__content {
-    position: relative;
-    box-shadow: 0 0 12px gray;
-    background-color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 0 5px 12px #ffffff71;
+    background-color: #ffffff;
     border-radius: 4px;
     padding: 1rem;
-    transition: all 0.4;
+    transition: all 0.4s;
+    min-width: 40vw;
+    max-width: 50vw;
+    max-height: 80vh;
   }
   &__clase {
     position: absolute;
