--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -5,4 +5,21 @@
 }
 html {
   font-size: 62.5%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #afafaf53;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
